--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "iview": "^3.5.4",
     "node-sass": "^6.0.1",
     "sass": "^1.36.0",
     "sass-loader": "^8.0.0",
